--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 :root {
   --bg-color: #12000C;
   --primary-color: #CF30C0;
-  --secod-color: #4AC0FD;
+  --second-color: #4AC0FD;
   --color-text: #FFFFFF;
 }
 
@@ -14,6 +14,9 @@ body {
   font-family: 'Barlow', sans-serif;
   line-height: 1.7;
   color: var(--color-text) !important;
+  text-decoration: none;
+  background: var(--bg-color) !important;
+  color: var(--color-text);
 }
 
 *{
@@ -22,10 +25,6 @@ body {
   border: 0;
   box-sizing: border-box;
   list-style: none;
-  text-decoration: none;
-  background: var(--bg-color);
-  color: var(--color-text);
-  font-family: 'Barlow', sans-serif;
   line-height: 1.7;
 
 }
