add section about me and skills

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,6 @@ body {
   color: var(--color-text) !important;
   text-decoration: none;
   background: var(--bg-color) !important;
-  color: var(--color-text);
 }
 
 *{
@@ -33,6 +32,111 @@ html {
   scroll-behavior: smooth;
 }
 
+#Neon_text {
+  margin-top: 2rem;
+  color: #fff;
+  font-size: 2.5rem;
+  text-shadow:
+    0 0 5px #fff,
+    0 0 10px var(--primary-color),
+    0 0 12px var(--primary-color),
+    0 0 16px var(--primary-color),
+    0 0 20px var(--primary-color),
+    0 0 25px var(--primary-color);
+}
+
+#Neon_text2 {
+  color: #fff;
+  font-size: 2rem;
+  text-shadow:
+    0 0 5px #fff,
+    0 0 10px var(--second-color),
+    0 0 12px var(--second-color),
+    0 0 16px var(--second-color),
+    0 0 20px var(--second-color),
+    0 0 25px var(--second-color);
+}
+
+
+/* -----------------------Button---------------------- */
+
+#Btn {
+  position: relative;
+  padding: 10px 20px;
+  border-radius: 20px;
+  border: 3px solid var(--second-color);
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 2px;
+  background: transparent;
+  color: var(--color-text);
+  overflow: hidden;
+  box-shadow: 0 0 0 0 transparent;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+
+#Btn:hover {
+  background: var(--second-color);
+  box-shadow: 0 0 30px 5px rgba(0, 142, 236, 0.815);
+  -webkit-transition: all 0.2s ease-out;
+  -moz-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+}
+
+#Btn:hover::before {
+  -webkit-animation: sh02 0.5s 0s linear;
+  -moz-animation: sh02 0.5s 0s linear;
+  animation: sh02 0.5s 0s linear;
+}
+
+#Btn::before {
+  content: '';
+  display: block;
+  width: 0px;
+  height: 86%;
+  position: absolute;
+  top: 7%;
+  left: 0%;
+  opacity: 0;
+  background: #fff;
+  box-shadow: 0 0 50px 30px #fff;
+  -webkit-transform: skewX(-20deg);
+  -moz-transform: skewX(-20deg);
+  -ms-transform: skewX(-20deg);
+  -o-transform: skewX(-20deg);
+  transform: skewX(-20deg);
+}
+
+@keyframes sh02 {
+  from {
+    opacity: 0;
+    left: 0%;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+    left: 100%;
+  }
+}
+
+#Btn:active {
+  box-shadow: 0 0 0 0 transparent;
+  -webkit-transition: box-shadow 0.2s ease-in;
+  -moz-transition: box-shadow 0.2s ease-in;
+  transition: box-shadow 0.2s ease-in;
+}
+
+p {
+  font-size: 1.3rem;
+  margin-right: 2rem;
+}
 
 
 
