--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,6 +1,19 @@
+
 #Nav {
     color: var(--color-text) !important; 
     font-size: 1.2rem;
+}
+
+#Nav:hover {
+    background-color:var(--second-color) ;
+    border-radius: 10px;
+}
+
+.active {
+    background-color:var(--second-color) ;
+    border-radius: 10px;
+    color: var(--color-text);
+    text-decoration: none;
 }
 
 #Logo {
