--- a/src/Components/about_me/about_me.css
+++ b/src/Components/about_me/about_me.css
@@ -9,7 +9,7 @@
 }
 
 #Avatar {
-    width: 53%;
+    width: 60%;
 }
 
 .section {
@@ -17,8 +17,13 @@
     width: 100%;
 }
 
-.section_1, .section_2 {
-    width: 50%;
+.section_1{
+    width: 40%;
+    padding: 2rem;
+}
+
+.section_2  {
+    width: 60%;
     padding: 2rem;
 }
 
@@ -39,13 +44,18 @@
 }
 
 #icon {
-    width: 20%;
+    width: 55%;
+}
+
+#icon:hover {
+    transform: scale(1.5);
 }
 
 .icons {
     display: flex;
     justify-content: space-between;
-    margin-top: 3rem;
+    margin-top: 2rem;
+    margin-left: 3rem;
 }
 
 .figure_11{
@@ -133,6 +143,10 @@
 
 #circle_2 {
     width: 5vh;
+}
+
+#Btn {
+    text-decoration: none;
 }
 
 
