add function changebackground and links to projects

--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,4 +1,9 @@
 
+.mb-3.active{
+background-color: var(--bg-color);
+}
+
+
 #Nav {
     color: var(--color-text) !important; 
     font-size: 1.2rem;
