--- a/src/Components/footer/footer.css
+++ b/src/Components/footer/footer.css
@@ -26,3 +26,31 @@
     display: flex;
     justify-content: center;
 }
+
+@media (min-width: 2560px) {
+    
+}
+
+@media (max-width: 1440px) {
+
+}
+
+@media (max-width: 1024px) {
+
+}
+
+@media (max-width: 768px) {
+
+}
+
+@media (max-width: 425px) {
+
+}
+
+@media (max-width: 375px) {
+
+}
+
+@media (max-width: 320px) {
+
+}
