--- a/src/index.css
+++ b/src/index.css
@@ -63,12 +63,13 @@ html {
 #Btn {
   position: relative;
   padding: 10px 20px;
-  border-radius: 20px;
-  border: 3px solid var(--second-color);
-  font-size: 1.5rem;
+  margin-bottom: 2rem;
+  border-radius: 15px;
+  border: 2px solid var(--second-color);
+  font-size: 1rem;
   text-transform: uppercase;
   font-weight: 600;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
   background: transparent;
   color: var(--color-text);
   overflow: hidden;
@@ -140,6 +141,170 @@ p {
 
 h2 {
   color: var(--color-text);
+}
+
+
+
+
+
+@media (min-width: 768px) {
+
+}
+
+@media (min-width: 992px) {
+
+}
+
+@media (min-width: 1200px) {
+
+}
+
+@media (min-width: 1440px) {
+  #Btn {
+    position: relative;
+    padding: 10px 20px;
+    border-radius: 20px;
+    border: 3px solid var(--second-color);
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 2px;
+    background: transparent;
+    color: var(--color-text);
+    overflow: hidden;
+    box-shadow: 0 0 0 0 transparent;
+    -webkit-transition: all 0.2s ease-in;
+    -moz-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+  }
+  
+  #Btn:hover {
+    background: var(--second-color);
+    box-shadow: 0 0 30px 5px rgba(0, 142, 236, 0.815);
+    -webkit-transition: all 0.2s ease-out;
+    -moz-transition: all 0.2s ease-out;
+    transition: all 0.2s ease-out;
+  }
+  
+  #Btn:hover::before {
+    -webkit-animation: sh02 0.5s 0s linear;
+    -moz-animation: sh02 0.5s 0s linear;
+    animation: sh02 0.5s 0s linear;
+  }
+  
+  #Btn::before {
+    content: '';
+    display: block;
+    width: 0px;
+    height: 86%;
+    position: absolute;
+    top: 7%;
+    left: 0%;
+    opacity: 0;
+    background: #fff;
+    box-shadow: 0 0 50px 30px #fff;
+    -webkit-transform: skewX(-20deg);
+    -moz-transform: skewX(-20deg);
+    -ms-transform: skewX(-20deg);
+    -o-transform: skewX(-20deg);
+    transform: skewX(-20deg);
+  }
+  
+  @keyframes sh02 {
+    from {
+      opacity: 0;
+      left: 0%;
+    }
+  
+    50% {
+      opacity: 1;
+    }
+  
+    to {
+      opacity: 0;
+      left: 100%;
+    }
+  }
+  
+  #Btn:active {
+    box-shadow: 0 0 0 0 transparent;
+    -webkit-transition: box-shadow 0.2s ease-in;
+    -moz-transition: box-shadow 0.2s ease-in;
+    transition: box-shadow 0.2s ease-in;
+  }
+  
+  p {
+    font-size: 1.3rem;
+    margin-right: 2rem;
+  }
+  
+  h2 {
+    color: var(--color-text);
+  }
+
+
+}
+
+
+@media (min-width: 2560px) {
+
+  #Btn {
+    position: relative;
+    padding: 20px 20px;
+    border-radius: 20px;
+    border: 3px solid var(--second-color);
+    font-size: 3rem;
+  }
+
+}
+
+@media (max-width: 1440px) {
+
+  #Btn {
+    font-size: 2rem;
+  }
+
+
+}
+
+@media (max-width: 1024px) {
+
+  #Btn {
+    font-size: 3rem;
+    margin-bottom: 4rem;
+  }
+}
+
+@media (max-width: 768px) {
+
+  #Btn {
+    font-size: 2rem;
+    margin-bottom: 4rem;
+  }
+}
+
+@media (max-width: 425px) {
+
+  #Btn {
+    font-size: 1rem;
+    margin-bottom: 4rem;
+  }
+}
+
+@media (max-width: 375px) {
+
+  #Btn {
+    font-size: 1rem;
+    margin-bottom: 4rem;
+  }
+}
+
+@media (max-width: 320px) {
+
+  #Btn {
+    font-size: 1rem;
+    margin-bottom: 4rem;
+  }
 }
 
 
