--- a/src/index.css
+++ b/src/index.css
@@ -145,107 +145,6 @@ h2 {
 
 
 
-
-
-@media (min-width: 768px) {
-
-}
-
-@media (min-width: 992px) {
-
-}
-
-@media (min-width: 1200px) {
-
-}
-
-@media (min-width: 1440px) {
-  #Btn {
-    position: relative;
-    padding: 10px 20px;
-    border-radius: 20px;
-    border: 3px solid var(--second-color);
-    font-size: 1.5rem;
-    text-transform: uppercase;
-    font-weight: 600;
-    letter-spacing: 2px;
-    background: transparent;
-    color: var(--color-text);
-    overflow: hidden;
-    box-shadow: 0 0 0 0 transparent;
-    -webkit-transition: all 0.2s ease-in;
-    -moz-transition: all 0.2s ease-in;
-    transition: all 0.2s ease-in;
-  }
-  
-  #Btn:hover {
-    background: var(--second-color);
-    box-shadow: 0 0 30px 5px rgba(0, 142, 236, 0.815);
-    -webkit-transition: all 0.2s ease-out;
-    -moz-transition: all 0.2s ease-out;
-    transition: all 0.2s ease-out;
-  }
-  
-  #Btn:hover::before {
-    -webkit-animation: sh02 0.5s 0s linear;
-    -moz-animation: sh02 0.5s 0s linear;
-    animation: sh02 0.5s 0s linear;
-  }
-  
-  #Btn::before {
-    content: '';
-    display: block;
-    width: 0px;
-    height: 86%;
-    position: absolute;
-    top: 7%;
-    left: 0%;
-    opacity: 0;
-    background: #fff;
-    box-shadow: 0 0 50px 30px #fff;
-    -webkit-transform: skewX(-20deg);
-    -moz-transform: skewX(-20deg);
-    -ms-transform: skewX(-20deg);
-    -o-transform: skewX(-20deg);
-    transform: skewX(-20deg);
-  }
-  
-  @keyframes sh02 {
-    from {
-      opacity: 0;
-      left: 0%;
-    }
-  
-    50% {
-      opacity: 1;
-    }
-  
-    to {
-      opacity: 0;
-      left: 100%;
-    }
-  }
-  
-  #Btn:active {
-    box-shadow: 0 0 0 0 transparent;
-    -webkit-transition: box-shadow 0.2s ease-in;
-    -moz-transition: box-shadow 0.2s ease-in;
-    transition: box-shadow 0.2s ease-in;
-  }
-  
-  p {
-    font-size: 1.3rem;
-    margin-right: 2rem;
-  }
-  
-  h2 {
-    color: var(--color-text);
-  }
-
-
-}
-
-
 @media (min-width: 2560px) {
 
   #Btn {
@@ -256,12 +155,36 @@ h2 {
     font-size: 3rem;
   }
 
+  p {
+    font-size: 3rem;
+  }
+
+  #Neon_text {
+    font-size: 5rem;
+  }
+
+  #Neon_text2 {
+    font-size: 4.5rem;
+  }
+
 }
 
 @media (max-width: 1440px) {
 
   #Btn {
     font-size: 2rem;
+  }
+
+  p {
+    font-size: 2rem;
+  }
+
+  #Neon_text {
+    font-size: 4.5rem;
+  }
+
+  #Neon_text2 {
+    font-size: 4rem;
   }
 
 
@@ -273,6 +196,14 @@ h2 {
     font-size: 3rem;
     margin-bottom: 4rem;
   }
+
+  #Neon_text {
+    font-size: 3.5rem;
+  }
+
+  #Neon_text2 {
+    font-size: 3rem;
+  }
 }
 
 @media (max-width: 768px) {
@@ -281,13 +212,37 @@ h2 {
     font-size: 2rem;
     margin-bottom: 4rem;
   }
+
+  p {
+    font-size: 1.8rem;
+  }
+
+  #Neon_text {
+    font-size: 2.5rem;
+  }
+
+  #Neon_text2 {
+    font-size: 2rem;
+  }
 }
 
-@media (max-width: 425px) {
+@media (max-width: 426px) {
 
   #Btn {
     font-size: 1rem;
     margin-bottom: 4rem;
+  }
+
+  p {
+    font-size: 1rem;
+  }
+
+  #Neon_text {
+    font-size: 2rem;
+  }
+
+  #Neon_text2 {
+    font-size: 1.5rem;
   }
 }
 
@@ -297,13 +252,30 @@ h2 {
     font-size: 1rem;
     margin-bottom: 4rem;
   }
+
+  p {
+    font-size: 1.2rem;
+  }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 321px) {
 
   #Btn {
     font-size: 1rem;
     margin-bottom: 4rem;
+  }
+
+  p {
+    font-size: 0.7rem;
+  }
+
+  #Neon_text {
+    font-size: 1.5rem;
+    margin-bottom: 0;
+  }
+
+  #Neon_text2 {
+    font-size: 1rem;
   }
 }
 
