--- a/src/Components/projects/projects.css
+++ b/src/Components/projects/projects.css
@@ -21,12 +21,16 @@
     border-radius: 1rem;
 }
 
-#actionsBox{
+#actionsBox, #actionsBox-btn{
   background-color: black;
-  max-height: 6rem;
+  max-height: 5rem;
   display: flex;
   justify-content: center;
   text-align: center;
+}
+
+#actionsBox-btn {
+  padding-top: 2rem;
 }
 
 .Boton {
@@ -37,30 +41,143 @@
   color: var(--color-text) !important;
 }
 
+#Btn-p{
+  position: relative;
+  padding: 5px 10px;
+  margin-bottom: 2rem;
+  border-radius: 15px;
+  border: 2px solid var(--second-color);
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 1px;
+  background: transparent;
+  color: var(--color-text);
+  overflow: hidden;
+  box-shadow: 0 0 0 0 transparent;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+
+#Btn-p:hover {
+  background: var(--second-color);
+  box-shadow: 0 0 30px 5px rgba(0, 142, 236, 0.815);
+  -webkit-transition: all 0.2s ease-out;
+  -moz-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+}
+
+#Btn-p:hover::before {
+  -webkit-animation: sh02 0.5s 0s linear;
+  -moz-animation: sh02 0.5s 0s linear;
+  animation: sh02 0.5s 0s linear;
+}
+
+#Btn-p::before {
+  content: '';
+  display: block;
+  width: 0px;
+  height: 86%;
+  position: absolute;
+  top: 7%;
+  left: 0%;
+  opacity: 0;
+  background: #fff;
+  box-shadow: 0 0 50px 30px #fff;
+  -webkit-transform: skewX(-20deg);
+  -moz-transform: skewX(-20deg);
+  -ms-transform: skewX(-20deg);
+  -o-transform: skewX(-20deg);
+  transform: skewX(-20deg);
+}
+
+.text-p {
+  font-size: 1.5rem !important;
+ }
+
 @media (min-width: 2560px) {
+  .cardBox{
+    display: grid;
+    grid-template-columns: 
+      repeat(auto-fit, 
+      minmax(300px, 1fr)
+      );
+    place-items: center;
+    margin: 2rem 8rem 2rem 8rem;
+    width: 80%;
+    gap: 3rem;
+    border: 3px solid var(--second-color);
+    border-radius: 1rem;
+    padding: 4rem 6rem;
+ } 
+
+
+ .text-p {
+  font-size: 2rem !important;
+ }
     
 }
 
 @media (max-width: 1440px) {
-
+  .text-p {
+    font-size: 2rem !important;
+   }
 }
 
 @media (max-width: 1024px) {
+  .text-p {
+    font-size: 2rem !important;
+   
+   }
+
+   #actionsBox{
+    max-height: 6rem;
+  }
+
+  .cardBox{
+    padding: 3rem 2rem;
+ }  
 
 }
 
 @media (max-width: 768px) {
 
+
+
 }
 
-@media (max-width: 425px) {
-
+@media (max-width: 426px) {
+  .cardBox{
+    grid-template-columns: 
+      repeat(auto-fit, 
+      minmax(200px, 1fr)
+      );
+    margin: 2rem 10rem 2rem 10rem;
+    width: 80%;
+    gap: 2rem;
+    border: none;
+    border-radius: 1rem;
+    padding: 1rem 2rem;
+  }  
 }
 
 @media (max-width: 375px) {
+  .cardBox{
+    padding: 0rem 0rem;
+ } 
 
+ .cardBox{
+  grid-template-columns: 
+    repeat(auto-fit, 
+    minmax(100px, 1fr)
+    );
+  margin: 2rem 10rem 2rem 10rem;
+  width: 80%;
+  gap: 2rem;
+  border: none;
+  border-radius: 1rem;
+  padding: 1rem 2rem;
+}  
 }
 
-@media (max-width: 320px) {
-
-}
