--- a/src/Components/projects/projects.css
+++ b/src/Components/projects/projects.css
@@ -162,6 +162,12 @@
   }  
 }
 
+@media (max-width: 439px) {
+  .cardBox{
+    border: none;
+  }  
+}
+
 @media (max-width: 375px) {
   .cardBox{
     padding: 0rem 0rem;
